--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
             <p class="note">
                 ✅ statusが"finished"なら点数に関係なく表示 | 
                 📝 任意の課題名も入力可能 | 
-                ⚡️ 検索は数ミリ秒で完了
+                ⚡️ 初回検索時にキャッシュを作成(3000人を調べるので時間がかかります)キャッシュがあると検索は数ミリ秒で完了
             </p>
         </footer>
     </div>
